# btrs

./: Cargo.toml  t.torrent
.github/workflows/: main.yml
ben/: Cargo.toml
ben/examples/: entry.rs  node.rs  parse.rs
ben/src/: decode.rs  encode.rs  error.rs  lib.rs  parse.rs  token.rs
ben/src/decode/: dict.rs  entry.rs  int.rs  list.rs
bencode/: Cargo.toml
bencode/src/: error.rs  lib.rs  reader.rs  value.rs  value_ref.rs
bencode/tests/: update.torrent  value.rs  value_ref.rs
client/: Cargo.toml
client-proto/: Cargo.toml
client-proto/src/: avg.rs  bitfield.rs  buf.rs  conn.rs  event.rs  ext.rs  handshake.rs  lib.rs  magnet.rs  metainfo.rs  msg.rs  state.rs  torrent.rs
client/src/: lib.rs  metadata.rs
dht/: Cargo.toml
dht-proto/: Cargo.toml
dht-proto/src/: bucket.rs  contact.rs  id.rs  lib.rs  server.rs  table.rs  util.rs
dht-proto/src/msg/: recv.rs  send.rs  txn.rs
dht-proto/src/server/: rpc.rs  task.rs
dht-proto/src/server/task/: announce.rs  base.rs  bootstrap.rs  get_peers.rs  ping.rs
dht/src/: bucket.rs  contact.rs  entry.rs  future.rs  id.rs  lib.rs  main.rs  msg.rs  server.rs  table.rs  util.rs
dht/src/msg/: recv.rs  send.rs  txn.rs
dht/src/server/: request.rs  rpc.rs  traversal.rs
dht/src/server/request/: announce.rs  bootstrap.rs  get_peers.rs  ping.rs  traversal.rs
dht/src/server/traversal/: announce.rs  bootstrap.rs  get_peers.rs  ping.rs
src/: announce.rs  avg.rs  bitfield.rs  cache.rs  conn.rs  download.rs  error.rs  fs.rs  future.rs  lib.rs  magnet.rs  main.rs  metadata.rs  msg.rs  peer.rs  storage.rs  stream.rs  torrent.rs  util.rs  work.rs  worker.rs
src/announce/: dht.rs  http.rs  mod.rs  udp.rs
src/client/: conn.rs  enums.rs  handshake.rs  mod.rs  msg.rs
src/client/msg/: bitfield.rs  mod.rs
src/data/: fs.rs  mod.rs
src/dht/: bucket.rs  contact.rs  future.rs  id.rs  main.rs  mod.rs  server.rs  table.rs
src/dht/msg/: recv.rs  send.rs
src/dht/server/: request.rs  rpc.rs  traversal.rs
src/dht/server/request/: announce.rs  bootstrap.rs  get_peers.rs  ping.rs
src/dht/server/traversal/: announce.rs  bootstrap.rs  get_peers.rs  ping.rs
src/kademlia/: mod.rs
src/metainfo/: mod.rs  torrent.rs
src/tracker/: mod.rs
utp/: Cargo.toml  README.md
utp/benches/: socket.rs  stream.rs
utp/examples/: echo-server.rs  utpcat.rs
utp/src/: error.rs  lib.rs  packet.rs  socket.rs  stream.rs  time.rs  util.rs
utp/tests/: stream.rs
