[package]
name = "btrs"
version = "0.1.0"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]
edition = "2018"

[workspace]
members = ["dht"]

[dependencies]
url = "2.1.1"
data-encoding = "2.1.2"
sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "0.2.11", features = ["full"] }
reqwest = "0.10.1"
futures = "0.3.1"
rand = "0.7.3"
log = "0.4.8"
percent-encoding = "2.1.0"
env_logger = "0.7.1"
ben =  { git = "https://github.com/95th/ben" }
clap = "2.33.0"
bytes = "0.5.4"
dht = { path = "dht" }
