[package]
name = "btrs"
version = "0.1.0"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]
edition = "2018"

[workspace]
members = ["dht", "ben"]

[dependencies]
url = "2.2.0"
data-encoding = "2.3.1"
sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "1.1.0", features = ["io-util", "net", "macros"] }
reqwest = "0.11.0"
futures = "0.3.12"
rand = "0.8.2"
log = { version = "0.4.13", features = ["release_max_level_off"] }
percent-encoding = "2.1.0"
env_logger = "0.8.2"
clap = "2.33.0"
byteorder = "1.4.2"
anyhow = "1.0.38"
bitflags = "1.2.1"
dht = { path = "./dht" }
ben = { path = "./ben" }
