[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
ben = { path = "../ben" }
bytes = "1.1.0"
tokio = { version = "1.1.0", default-features = false, features = ["io-util", "rt", "macros"] }
futures = "0.3.12"
proto = { package = "client-proto", path = "../client-proto" }
tracing = "0.1.29"
pin-project-lite = "0.2.7"
