[package]
name = "dht"
version = "0.1.0"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]
edition = "2018"

[dependencies]
data-encoding = "2.3.2"
tokio = { version = "1.6.0", features = ["net", "time"] }
futures = "0.3.15"
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"
ben = "0.2.0"
byteorder = "1.4.3"
anyhow = "1.0.40"
bitflags = "1.2.1"
slab = "0.4.3"
hashbrown = "0.11.2"
