[package]
name = "dht"
version = "0.1.0"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.6.0", features = ["net", "time", "macros", "rt"] }
futures = "0.3.15"
log = "0.4.14"
anyhow = "1.0.40"
dht-proto = { path = "../dht-proto" }
data-encoding = "2.3.2"
